<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E5"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="#2B2A2A"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/photography_quiz"
            android:textColor="#DDDDDD"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="169dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/pagelogo"
            app:srcCompat="@drawable/logo_s" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="415dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="382dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingLeft="20dp"
            android:text="@string/question_no"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="286dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:text="@string/score"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/option_a"
        android:textSize="18sp"
        android:buttonTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/option_b"
        android:textSize="18sp"
        android:buttonTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton1" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/option_c"
        android:textSize="18sp"
        android:buttonTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/option_d"
        android:textSize="18sp"
        android:buttonTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="#FEBA12"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:layout_marginBottom="76dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:backgroundTint="#FEBA12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="291dp"
        android:layout_height="116dp"
        android:layout_marginTop="8dp"
        android:autoText="false"
        android:gravity="center"
        android:text="@string/SampleQuestion"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>